[package]
name = "valthrun-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.31"
inquire = "0.7.5"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde"] }
windows-registry = "0.5.3"
windows-result = "0.3.4"

[build-dependencies]
chrono = "0.4.41"
embed-manifest = "1.3.1"
winres = "0.1.12"
